kubernetes/validation/tls/redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: tls-validation
spec:
  redirectScheme:
    scheme: https
    permanent: true
